# escartola_ga_ai

./: .gitignore  .vercelignore  pyproject.toml  requirements.lock.txt  requirements.txt  vercel.json
api/: vercel.py
config/: settings.py  urls.py  wsgi.py
optimizer/: cartola_services.py  formations.py  genetic_algorithm.py  middleware.py  views.py
optimizer/templates/optimizer/: home.html  team.html
server/: vercel.json
server/api/: vercel.py
server/config/: asgi.py  settings.py  urls.py
server/optimizer/: cartola_services.py  formations.py  genetic_algorithm.py  views.py
server/optimizer/templates/optimizer/: 404.html  home.html  team.html
src/escartola/: main.py
src/escartola/genetic_algorithm/: GeneticAlgorithm.py
src/escartola/models/athlete/: Athlete.py
src/escartola/models/team/: Team.py
src/escartola/services/: cartola_services.py
